--- a/scrms/scrms/main/templates/auth.html
+++ b/scrms/scrms/main/templates/auth.html
@@ -4,18 +4,81 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-6 form-auth-box">
-              <form class="form-signin" method="post" action="/auth/">
-                      {% csrf_token %}
+              <!--<form class="form-signin"  method="post" action="/auth/">-->
+              {% csrf_token %}
                       <h2 class="form-signin-heading"><i style="color:#fff">SCRIMS</i></h2>
                         <label for="inputEmail" class="sr-only">{{lang.0.auth.0.email}}</label>
                         <input type="email" id="inputEmail" name="email" class="form-control dark_input" placeholder="{{lang.0.auth.0.email}}" required="" autofocus="">
                         <label for="inputPassword" class="sr-only">{{lang.0.auth.0.pass}}</label>
                         <input type="password" id="inputPassword" name="password" class="form-control dark_input" placeholder="{{lang.0.auth.0.pass}}" required="">
                         <br>
-                      <button class="btn btn-outline-success form-control" type="submit">{{lang.0.auth.0.enter}}</button>
-              </form>
+                        <button id="send" class="btn btn-outline-success form-control" type="submit">{{lang.0.auth.0.enter}}</button>
+              <!--</form>-->
           </div>
         </div>
       </div>
+      <script>
+
+        function Request(email,pass){
+          if (email != '' && pass != '' ){
+                $.ajax({
+                  url:'/authorize/',
+                  type:'POST',
+                  data:{
+                    "email": email,
+                    "password": pass,
+                    "csrfmiddlewaretoken":'{{ csrf_token }}'
+                  },
+                  success:function(data){
+                      window.location.href = '/'
+                  },statusCode:{
+                    404: function(e) {
+                      new Noty({
+                        timeout: 3700,
+                        layout: 'bottomCenter',
+                        type: 'error',
+                        text:  '{{lang.0.auth.0.wrong}}'
+                      }).show();
+
+                    }
+                  }
+                })
+
+          }else{
+                new Noty({
+                  timeout: 3700,
+                  layout: 'bottomCenter',
+                  type: 'info',
+                  text:  '{{lang.0.auth.0.empty}}'
+                }).show();
+          }
+        }
+
+
+
+        function SendData(){
+          var send = document.getElementById('send')
+            send.onclick = function(){
+
+              var email = document.getElementById('inputEmail').value
+              var pass = document.getElementById('inputPassword').value
+              Request(email,pass)
+
+            }
+        }
+
+        window.onload = function(){
+            SendData()
+        }
+
+      </script>
+
+      <script src="/static/js/vendor/modernizr-3.5.0.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="/static/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+      <script src="/static/js/plugins.js"></script>
+
+      <script src="/static/js/vendor/noty.js"></script>
+      <script src="/static/js/vendor/js-cookie.js"></script>
   </body>
 </html>
