--- a/scrms/scrms/main/templates/crumbs/chat.html
+++ b/scrms/scrms/main/templates/crumbs/chat.html
@@ -1,10 +1,22 @@
 {% load thumbnail %}
 
-<div class="container app">
+<!-- json  -->
+
+<script>
+
+  const USER_ID = {{user.id}}
+  const USERS = [{% for item in users  %}{"id":"{{item.id}}","name":"{{item.name}}","img":"{% thumbnail item.image "50x50" crop="center" as im %}{{ im.url }}{% endthumbnail %}"},{% endfor %}]
+
+</script>
+
+
+<div id="scrims_chat" class="container app">
   <div class="row app-one">
     <div class="col-sm-4 side">
       <div class="side-one">
         <div class="row heading">
+
+
           <div class="col-sm-3 col-xs-3 heading-avatar">
             <div class="heading-avatar-icon">
               {% thumbnail user.image "50x50" crop="center" as im %}
@@ -12,6 +24,9 @@
               {% endthumbnail %}
             </div>
           </div>
+
+
+
           <div class="col-sm-1 col-xs-1  heading-dot  pull-right">
             <i class="fa fa-ellipsis-v fa-2x  pull-right" aria-hidden="true"></i>
           </div>
@@ -29,10 +44,12 @@
           </div>
         </div>
 
-        <div class="row sideBar">
+        <div id="scrims_chat_contact_list" class="row sideBar">
+
+
 
           {% for item in users  %}
-              <div class="row sideBar-body" data-init="{{item.id}}">
+              <div class="row sideBar-body scrims_chat_companion" data-init="{{item.id}}">
                 <div class="col-sm-3 col-xs-3 sideBar-avatar">
                   <div class="avatar-icon">
                     {% thumbnail item.image "50x50" crop="center" as im %}
@@ -47,13 +64,14 @@
                     </span>
                     </div>
                     <div class="col-sm-4 col-xs-4 pull-right sideBar-time">
-                      <span class="time-meta pull-right">18:18
+                      <span class="time-meta pull-right">
                     </span>
                     </div>
                   </div>
                 </div>
               </div>
           {% endfor %}
+
 
         </div>
       </div>
@@ -277,6 +295,8 @@
 
     <div class="col-sm-8 conversation">
       <div class="row heading">
+
+      <div id="scrims_chat_heading" class="">
         <div class="col-sm-2 col-md-1 col-xs-3 heading-avatar">
           <div class="heading-avatar-icon">
             <img src="https://bootdey.com/img/Content/avatar/avatar6.png">
@@ -287,12 +307,15 @@
           </a>
           <span class="heading-online">Online</span>
         </div>
+      </div>
+
+
         <div class="col-sm-1 col-xs-1  heading-dot pull-right">
           <i class="fa fa-ellipsis-v fa-2x  pull-right" aria-hidden="true"></i>
         </div>
       </div>
 
-      <div class="row message" id="conversation">
+      <div id="scrims_chat_canvas" class="row message" id="conversation">
         <div class="row message-previous">
           <div class="col-sm-12 previous">
             <a onclick="previous(this)" id="ankitjain28" name="20">
@@ -301,31 +324,7 @@
           </div>
         </div>
 
-        <div class="row message-body">
-          <div class="col-sm-12 message-main-receiver">
-            <div class="receiver">
-              <div class="message-text">
-               Hi, what are you doing?!
-              </div>
-              <span class="message-time pull-right">
-                Sun
-              </span>
-            </div>
-          </div>
-        </div>
 
-        <div class="row message-body">
-          <div class="col-sm-12 message-main-sender">
-            <div class="sender">
-              <div class="message-text">
-                I am doing nothing man!
-              </div>
-              <span class="message-time pull-right">
-                Sun
-              </span>
-            </div>
-          </div>
-        </div>
       </div>
 
       <div class="row reply">
@@ -333,12 +332,12 @@
           <i class="fa fa-smile-o fa-2x"></i>
         </div>
         <div class="col-sm-9 col-xs-9 reply-main">
-          <textarea class="form-control" rows="1" id="comment"></textarea>
+          <textarea class="form-control" rows="1" id="scrims_chat_textarea"  ></textarea>
         </div>
         <div class="col-sm-1 col-xs-1 reply-recording">
           <i class="fa fa-microphone fa-2x" aria-hidden="true"></i>
         </div>
-        <div class="col-sm-1 col-xs-1 reply-send">
+        <div class="col-sm-1 col-xs-1 reply-send" id="scrims_chat_send">
           <i class="fa fa-send fa-2x" aria-hidden="true"></i>
         </div>
       </div>
