--- a/scrms/scrms/main/templates/crumbs/footer.html
+++ b/scrms/scrms/main/templates/crumbs/footer.html
@@ -1,10 +1,29 @@
 
 <footer></footer>
 <script src="/static/js/vendor/modernizr-3.5.0.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+
+
+
+<!-- MOMENT js-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/locale/ru.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/locale/en-au.js"></script>
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
 <script>window.jQuery || document.write('<script src="/static/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
 <script src="/static/js/plugins.js"></script>
 <script src="/static/js/main.js"></script>
+
+
+
 <script src="/static/js/vendor/noty.js"></script>
 <script src="/static/js/vendor/classie.js"></script>
 <script src="/static/js/vendor/gnmenu.js"></script>
@@ -13,17 +32,182 @@
 <script src="/static/js/vendor/socket.io.js"></script>
 
 <script>
+  new gnMenu( document.getElementById( 'gn-menu' ));
+</script>
 
+
+<!-- SCRIMS CHAT -->
+<script type="text/babel">
+
+$.fn.shake = function(intShakes, intDistance, intDuration) {
+    this.each(function() {
+        $(this).css("position","relative");
+        for (var x=1; x<=intShakes; x++) {
+        $(this).animate({left:(intDistance*-1)}, (((intDuration/intShakes)/4)))
+    .animate({left:intDistance}, ((intDuration/intShakes)/2))
+    .animate({left:0}, (((intDuration/intShakes)/4)));
+    }
+  });
+return this;
+};
+
+//config
+moment.locale("ru");
 var socket = io.connect('http://127.0.0.1:3000');
+var csrf_token = "{{csrf_token}}"
+
+//config
 
 
-window.onclick = function(){
-    socket.emit('chat message', '{"user":"13","type":"text","body":"lalal"}');
-    socket.on('chat message', function (data) {
-      console.log(JSON.parse(data));
-    });
+function CHAT(){
+
+
+
+
+
+
+  function SELECT_COMPANION(id){
+
+      let user = USERS.filter(data => data.id==id)
+
+      $('#scrims_chat_canvas').attr("data-init",id)
+
+      $('#scrims_chat_heading').empty()
+      $('#scrims_chat_heading').html(`<div id="scrims_chat_init" class="col-sm-2 col-md-1 col-xs-3 heading-avatar" data-init="${user[0].id}">
+            <div class="heading-avatar-icon">
+              <img src="${user[0].img}">
+            </div>
+            </div>
+          <div class="col-sm-8 col-xs-7 heading-name">
+            <a href="/personal/user/2/${user[0].id}" class="heading-name-meta">${user[0].name}
+            </a>
+            <span class="heading-online">Online</span>
+          </div>`)
+
+  }
+
+
+  function SEND_AJAX_MESSAGE(msg_object){
+    $.ajax({
+      url:'/api/send_message/',
+      type:'POST',
+      data:msg_object,
+      success:function(data){
+          socket.emit('chat message',msg_object);
+      },statusCode:{
+        403:function(){
+          window.location.reload()
+        }
+      }
+    })
+  }
+
+
+
+
+
+
+
+
+function SEND_MESSAGE(id_user,id_companion,type,message){
+
+  let msg = message.replace(/\n/g, "").replace(/\s/g, "")
+  if(msg === ''){return false}
+  message = message.replace(/\n/g, "<br>")
+
+  var date = moment().format('YYYY-MM-DD HH:mm:ss')
+  let msg_object = {"user":id_user,"companion":id_companion,"type":type,"body":message,"date":date,"csrfmiddlewaretoken":csrf_token}
+
+  SEND_AJAX_MESSAGE(msg_object)
+
+
+  $('#scrims_chat_canvas').append(`<div class="row message-body scrims_chat_msg_main">
+            <div class="col-sm-12 message-main-sender">
+              <div class="sender">
+                <div class="message-text">
+                  ${message}
+                </div>
+                <span class="message-time pull-right">
+                  ${moment().calendar()}
+                </span>
+              </div>
+            </div>
+          </div>`)
+
+
+    $('#scrims_chat_textarea').val('')
+    $('#scrims_chat_canvas').animate({scrollTop:$('#scrims_chat_canvas').prop('scrollHeight')},"slow")
 
 }
 
-  new gnMenu( document.getElementById( 'gn-menu' ));
+
+//actions
+  $('#scrims_chat_send').on('click',function(){
+      SEND_MESSAGE(USER_ID,parseInt($('#scrims_chat_init').attr('data-init')),'text',$('#scrims_chat_textarea').val())
+
+  })
+
+
+  $('#scrims_chat_textarea').bind('keypress', function(event) {
+      if((event.keyCode == 10 || event.keyCode == 13) && event.ctrlKey) {
+        SEND_MESSAGE(USER_ID,parseInt($('#scrims_chat_init').attr('data-init')),'text',$('#scrims_chat_textarea').val())
+      }
+  });
+
+
+
+  $('.scrims_chat_companion').off('click')
+  $('.scrims_chat_companion').on('click',function(){
+    SELECT_COMPANION($(this).attr('data-init'))
+  })
+//end actions
+
+
+function PARSER_RECIVE_MESSAGE(data){
+  console.log(data,$('#scrims_chat_canvas').attr('data-init'))
+
+  if(data.companion === USER_ID && parseInt($('#scrims_chat_canvas').attr('data-init')) === data.user){
+    $('#scrims_chat_canvas').append(`<div class="row message-body scrims_chat_msg_receiver">
+              <div class="col-sm-12 message-main-receive">
+                <div class="receiver">
+                  <div class="message-text">
+                    ${data.body}
+                  </div>
+                  <span class="message-time pull-right">
+                    ${moment().calendar()}
+                  </span>
+                </div>
+              </div>
+            </div>`)
+
+  }else if (data.companion === USER_ID && parseInt($('#scrims_chat_canvas').attr('data-init')) != data.user) {
+
+    function lala(){
+
+    }
+
+      $('.scrims_chat_companion').each(function() {
+        if($(this).attr('data-init') == data.user){
+          $(this).find(".pull-right").html('<b class="badge scrims_chat_count_message">1</b>')
+          $('.scrims_chat_count_message').shake()
+        }
+      })
+  }
+
+
+
+
+}
+
+
+socket.on('chat message',data=>PARSER_RECIVE_MESSAGE(data))
+
+
+}
+
+$(document).ready(function(){
+  CHAT()
+})
+
+
 </script>
