--- a/scrms/scrms/static/css/main.css
+++ b/scrms/scrms/static/css/main.css
@@ -30,8 +30,8 @@
     width: 3px;
    }
 
-.message-main-receive{
-      margin: 2px 0;
+.message-main-receiver{
+      margin: 3px 0;
 }
 .scrims_chat_count_message{
       margin: 0 25px;
@@ -403,8 +403,7 @@
      padding: 4px 10px 7px !important;
      border-radius: 10px 10px 10px 0;
      background: #ffffff;
-     font-size: 12px;
-     text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
+     font-size: 5px;
      word-wrap: break-word;
      display: inline-block;
    }
