--- a/scrms/main/templates/fileview.html
+++ b/scrms/main/templates/fileview.html
@@ -1,2 +1,14 @@
+{% load thumbnail %}
 
-<img src="data:image/JPG;base64,{{ img }}"/>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, minimum-scale=0.1">
+  <title>show.file.php (1920×1080)</title>
+</head>
+  <body style="margin: 0px; background: #0e0e0e;text-align: center;">
+  <img src="data:image/JPG;base64,{{ img }}" style="max-width:600px;margin:20px auto;">
+</body>
+</html>
+
+
+<!--<img src=""/>-->
