--- a/scrms/main/templates/crumbs/chat.html
+++ b/scrms/main/templates/crumbs/chat.html
@@ -330,6 +330,10 @@
 
       <div class="row reply">
 
+        <div class="heading-typing">
+        <img style="width: 55px;height: 55px;margin: -13px;" src="/static/img/typing.gif"/>
+        </div>
+
         <div class="col-sm-1 col-xs-1 reply-emojis">
           <i class="fa fa-smile-o fa-2x"></i>
         </div>
